public/css/main.scss
// Core variables and mixins
@import "custom";
@import "../../node_modules/bootstrap/scss/variables";
@import "../../node_modules/bootstrap/scss/mixins";

// Core CSS
@import "../../node_modules/bootstrap/scss/reboot";
@import "../../node_modules/bootstrap/scss/type";
@import "../../node_modules/bootstrap/scss/images";
@import "../../node_modules/bootstrap/scss/grid";
@import "../../node_modules/bootstrap/scss/buttons";

// Components
// @import "../../node_modules/bootstrap/scss/transitions";
@import "../../node_modules/bootstrap/scss/nav";
@import "../../node_modules/bootstrap/scss/navbar";

// Utility classes
@import "../../node_modules/bootstrap/scss/utilities";


body{
  margin: 0;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

// Blocs
//
// 

.bloc{  
  padding-top: $spacer-y * 3;
  padding-bottom: $spacer-y * 3;

  @include media-breakpoint-up(lg){
    padding-top: $spacer-y * 6;
    padding-bottom: $spacer-y * 6;
  }
}

.bloc-muted{
  background-color: #f9f9f9;
}

.bloc-header{
  position: relative;
  padding: 80px 0;
  background-repeat: no-repeat;
  background-position: left top;
  background-attachment: fixed;
  background-size: cover;

  @include media-breakpoint-up(md){
    padding-top: $spacer-y * 15;
    padding-bottom: $spacer-y * 15;
  }
}

.bloc-home-header{
  background-image: url("../images/home-header.jpg")
}


// Navbar
//
// 

.navbar-text{
  font-weight: 200;
  font-size: $font-size-lg;
}

.navbar-toggler-right{
  top: 50%;
  transform: translateY(-50%);
}

#overlayNav{
  @include media-breakpoint-down(md){
    position: fixed;
    height: 0;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    z-index: 2;
    background-color: rgba(0,0,0, 0.9);
    text-align: center;
    overflow-x: auto;
    overflow: hidden;
    transition: 0.5s;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;

    > .navbar-text{
      color: #fff;
      padding: $spacer-y $spacer-x * 3;
    }
  }
}

.closeNav {
  display: none;
  position: absolute;
  top: 20px;
  right: 45px;
  font-size: 60px;
  color: #818181;
  
  @include hover-focus{
    color: #f1f1f1;
    cursor: pointer;
    text-decoration: none;
  }

  @include media-breakpoint-down(md){
    display: block;
  }
}

// Footer
//
//

.site-footer{
  padding-top: $spacer-y * 3;
  padding-bottom: $spacer-y * 3;
  font-size: $font-size-sm;
}

